2010-09-12  Frank Lanitz  <frank@frank.uvena.de>

 * Moved LaTeX menu out of Tool menu and put it into generic menubar item.
   Make this menubar item be triggered by filetype. 
 * Fix a bug that keeps fonzt size choose from tools menu active even
   there is no document open.


2010-05-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Add a feature which is inserting {} automaticlly once a new line is
   entered and an command seems to don't have some.


2010-05-10  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Fix indention on inserting list environments.


2010-04-24  Frank Lanitz  <frank@frank.uvena.de>

 * Add a simple insert dommand dialog, which shall support inserting
   commands more in future


2010-04-21  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Automatic insert {} after typing ^ or _


2010-04-16  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Fix indention on insert environment features.
 * Make wizard run on hitting enter when inserting some of the values.


2010-04-14  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Ensure basic indent is getting applied on closing command of
   autocompletion of \begin{} and \begingroup{} feature.


2010-04-11  Frank Lanitz  <frank@frank.uvena.de>

 * Enabling inserting label on pushing return after typing in label name.
 * Enabling inserting \usepackage{} on pushing return after typing in dialog.
 * Enabling inserting environment on pushing return after typing inside
   the insert environment dialog.
 * Enabling inserting reference on pushing return after typing inside the
   insert reference dialog.


2010-03-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Add a menu entry for inserting font sizes to document


2010-03-20  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Insert a keybinding and a dialog to insert a \usepackage{} line to header.
   Still experimental.


2010-03-12  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
